--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "chartjs-adapter-moment": "^1.0.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
