--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,12 +4,16 @@ djangorestframework_simplejwt==5.3.1
 python-dotenv==1.0.1
 rest_framework_simplejwt==0.0.2
 asgiref
-Django
 django-cors-headers
-djangorestframework
-djangorestframework-simplejwt
 PyJWT
 pytz
 sqlparse
 psycopg2-binary
 python-dotenv
+django-jazzmin
+Flask
+Flask-cors
+numpy
+tensorflow
+joblib
+scikit-learn
