--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,8 +31,10 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "react-table": "^7.8.0",
     "recharts": "^2.12.7",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.1"
   },
   "devDependencies": {
