--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-table": "^7.8.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.1"
