change server url

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,7 @@
 VITE_API_BASE_URL_LOCAL = 'http://127.0.0.1:8000/api/'
-VITE_API_BASE_URL_LOCAL_IMG = 'http://127.0.0.1:8000/'
+VITE_API_BASE_URL_LOCAL_IMG = 'http://127.0.0.1:8000'
+VITE_API_BASE_URL_PROD_IMG = 'http://52.140.99.1'
 VITE_API_BASE_URL_LOCAL_FLASK = 'http://127.0.0.1:5000'
 VITE_API_BASE_URL_LOCAL_FLASK_LLM = 'http://127.0.0.1:8001/api/'
-VITE_API_BASE_URL_PROD_FLASK = 'http://4.240.40.90/'
-VITE_API_BASE_URL_PROD = 'http://4.240.40.90/api/' 
+VITE_API_BASE_URL_PROD_FLASK = 'http://52.140.99.1'
+VITE_API_BASE_URL_PROD = 'http://52.140.99.1/api/' 
